--- a/fast_planner/test_prm/launch/dynamic_obs_params.yaml
+++ b/fast_planner/test_prm/launch/dynamic_obs_params.yaml
@@ -6,8 +6,8 @@ world_frame: "map"
 # 障碍物数量
 obs_num: 10
 
-# 障碍物最大速度 (m/s)
-obs_max_speed: 1.5
+# 障碍物最大速度 (m/s) - 增加速度以获得更长的运动距离
+obs_max_speed: 0.5
 
 # 发布频率 (Hz)
 freq: 30
